# candle_dll

./: .clang-format  .clang-format-ignore  CMakeLists.txt  CMakePresets.json  README.md  cspell.json
example/: CMakeLists.txt  main.c
include/: candle.h
src/: CMakeLists.txt  candle.c  candle_ctrl_req.c  candle_ctrl_req.h  candle_defs.h
